@@ -64,6 +64,27 @@ my @tests = (
         '0.Привет',
         [qw(0 . Привет)],
     ],
+    # issue #2 reported by kmike
+    [
+        '. 6',
+        [qw(. 6)],
+    ],
+    [
+        '. 7',
+        [qw(. 7)],
+    ],
+    [
+        '. 0',
+        [qw(. 0)],
+    ],
+    [
+        'и выразительно скомпонованным . 2.5.4.4 . От импринтинга',
+        [qw(и выразительно скомпонованным . 2.5.4.4 . От импринтинга)],
+    ],
+    [
+        'определяется федеральным законодательством . 3 . Решение органа',
+        [qw(определяется федеральным законодательством . 3 . Решение органа)],
+    ],
 );
 
 plan tests => scalar @tests;
